# BackEnd/handlers/tags_handler.go
@@ -68,7 +68,7 @@ func GetQuestionsFromTag(params tag.GetQuestionsFromTagParams, u *models.User) m
 	return tag.NewGetQuestionsFromTagForbidden()
 }
 
-// GetQuestionsFromTag GET /tags/{tag}/editQuestions. Returns all non-published questions related to tag.
+// GetEditQuestionsFromTag GET /tags/{tag}/editQuestions. Returns all non-published questions related to tag.
 // Auth: Teacher Or Admin
 func GetEditQuestionsFromTag(params tag.GetEditQuestionsFromTagParams, u *models.User) middleware.Responder {
 	if isTeacherOrAdmin(u) {
@@ -88,4 +88,46 @@ func GetEditQuestionsFromTag(params tag.GetEditQuestionsFromTagParams, u *models
 		return tag.NewGetEditQuestionsFromTagInternalServerError()
 	}
 	return tag.NewGetEditQuestionsFromTagForbidden()
+}
+
+// GetTestsFromTag GET /tags/{tag}/tests. Returns all questions related to tag
+// Auth: Teacher or Admin
+func GetTestsFromTag(params tag.GetTestsFromTagParams, u *models.User) middleware.Responder {
+	if isTeacherOrAdmin(u) {
+		db, err := dbconnection.ConnectDb()
+		if err == nil {
+			var ts []*dao.Test
+			ts, err = dao.GetTestsFromTag(db, params.Tag)
+			if err == nil {
+				var mts []*models.Test
+				mts, err = dao.ToModelTests(ts)
+				if err == nil {
+					return tag.NewGetTestsFromTagOK().WithPayload(mts)
+				}
+			}
+		}
+		return tag.NewGetTestsFromTagInternalServerError()
+	}
+	return tag.NewGetTestsFromTagForbidden()
+}
+
+// GetEditTestsFromTag GET /tags/{tag}/editTests. Returns all non-published questions related to tag
+// Auth: Teacher or Admin
+func GetEditTestsFromTag(params tag.GetEditTestsFromTagParams, u *models.User) middleware.Responder {
+	if isTeacherOrAdmin(u) {
+		db, err := dbconnection.ConnectDb()
+		if err == nil {
+			var ts []*dao.Test
+			ts, err = dao.GetEditTestsFromTag(db, params.Tag)
+			if err == nil {
+				var mts []*models.Test
+				mts, err = dao.ToModelTests(ts)
+				if err == nil {
+					return tag.NewGetEditTestsFromTagOK().WithPayload(mts)
+				}
+			}
+		}
+		return tag.NewGetEditTestsFromTagInternalServerError()
+	}
+	return tag.NewGetEditTestsFromTagForbidden()
 }
